--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "dynamo-node",
+  "name": "@ostai/dynamo",
   "version": "1.1.13",
   "description": "most handy DynamoDB mapper yet",
-  "main": "dynamoDB.js",
+  "main": "index.js",
   "directories": {
     "test": "tests/*"
   },
   "dependencies": {
-    "aws-sdk": "^2.49.0"
+    "aws-sdk": "^2.432.0"
   },
   "devDependencies": {
-    "chai": "^4.0.2",
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-plugin-import": "^2.7.0",
-    "promise-fail": "^1.0.1"
+    "chai": "^4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "mocha": "^6.0.2",
+    "promise-fail": "^1.0.2"
   },
   "scripts": {
     "test": "DYNAMO_ENV=test mocha --recursive tests",
