--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-ostai": "^3.0.0",
     "eslint-plugin-import": "^2.16.0",
     "mocha": "^6.0.2",
     "promise-fail": "^1.0.2"
   },
   "scripts": {
-    "test": "DYNAMO_ENV=test mocha --recursive tests",
+    "lint": "eslint .",
+    "fix": "eslint . --fix",
+    "test": "DYNAMO_ENV=test mocha --recursive test",
     "createTable": "node testTable create",
     "deleteTable": "node testTable delete"
   },
