--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@ostai/dynamo",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "description": "most handy DynamoDB mapper yet",
   "main": "index.js",
   "directories": {
     "test": "tests/*"
   },
+  "files": [
+    "index.js",
+    "lib/"
+  ],
   "dependencies": {
     "aws-sdk": "^2.432.0"
   },
