--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "codecov": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-config-ostai": "^3.0.0",
     "eslint-plugin-import": "^2.16.0",
     "mocha": "^6.0.2",
+    "nyc": "^13.3.0",
     "promise-fail": "^1.0.2"
   },
   "scripts": {
     "lint": "eslint .",
     "fix": "eslint . --fix",
-    "test": "mocha --recursive test",
+    "test": "nyc mocha --recursive test",
+    "posttest": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "createTable": "node testTable create",
     "deleteTable": "node testTable delete"
   },
