--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ostai/dynamo",
+  "name": "dynamico",
   "version": "1.1.14",
   "description": "most handy DynamoDB mapper yet",
   "main": "index.js",
@@ -33,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AbdullahZN/dynamo-node.git"
+    "url": "git+https://github.com/kaelzhang/dynamico.git"
   },
   "keywords": [
     "dynamodb",
@@ -46,10 +46,9 @@
     "dynamodb orm",
     "dynamo orm"
   ],
-  "author": "Abdullah Uzun",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AbdullahZN/dynamo-node/issues"
+    "url": "https://github.com/kaelzhang/dynamico/issues"
   },
-  "homepage": "https://github.com/AbdullahZN/dynamo-node#readme"
+  "homepage": "https://github.com/kaelzhang/dynamico"
 }
